Applications/pulsepay-api/canary-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: pulsepay-api-canary
  namespace: pulsepay

spec:

  selector:
    app: pulsepay-api

  ports:

  - port: 80

    targetPort: 80

    protocol: TCP

  type: ClusterIP
