Applications/pulsepay-api/ingress.yaml
apiVersion: networking.k8s.io/v1

kind: Ingress

metadata:
  name: pulsepay-api
  namespace: pulsepay

spec:

  ingressClassName: nginx

  rules:

  - host: ec2-54-163-52-103.compute-1.amazonaws.com

    http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: pulsepay-api-stable

            port:

              number: 80
